cancle button modified

--- a/index.html
+++ b/index.html
@@ -675,6 +675,10 @@ Modal Size
 									</div>
 
 									<div class="d-flex justify-content-end">
+										<!--Wrong Button Type 
+										<button type="cancle" class="btn btn-secondary btn-sm">Cancel</button>
+										-->
+
 										<!-- <button type="reset" class="btn btn-secondary btn-sm">Cancel</button> -->
 										<!-- or -->
 										<button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
